--- a/.github/workflows/jenkins_prepare.yml
+++ b/.github/workflows/jenkins_prepare.yml
@@ -2,12 +2,18 @@ name: prepare_jenkins
 on:
   push:
     branches:
-      - 'main'
+      - main
+      - merged
+    paths:
+      - jenkins/**
   workflow_dispatch:
 
 jobs:
   build_docker:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./jenkins
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -30,10 +36,13 @@ jobs:
         with:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/jenkins:${{ github.sha }}
-          context: docker
+          context: jenkins/docker
   prepare_head_node:
     needs: build_docker
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./jenkins
     env:
       OAUTH_CLIENT_ID_PROD: ${{ secrets.OAUTH_CLIENT_ID_PROD }}
       OAUTH_CLIENT_SECRET_PROD: ${{ secrets.OAUTH_CLIENT_SECRET_PROD }}
@@ -44,8 +53,8 @@ jobs:
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
       DOCKERHUB_TOKEN_TLCPACKSTAGING: ${{ secrets.DOCKERHUB_TOKEN_TLCPACKSTAGING }}
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.JENKINS_AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.JENKINS_AWS_SECRET_ACCESS_KEY }}
       TQCHEN_CI_PAT: ${{ secrets.TQCHEN_CI_PAT }}
       SCCACHE_BUCKET: ${{ secrets.SCCACHE_BUCKET }}
       DOCS_PUSH_TOKEN: ${{ secrets.DOCS_PUSH_TOKEN }}
