--- a/.github/workflows/terraform_plan.yml
+++ b/.github/workflows/terraform_plan.yml
@@ -1,9 +1,16 @@
 name: terraform
 on:
   pull_request:
-    branches: [main]
+    branches:
+      - main
+      - merged
+    paths:
+      - terraform/**
   pull_request_target:
-    branches: [main]
+    branches:
+      - main
+    paths:
+      - terraform/**
 
 jobs:
   validate:
@@ -12,6 +19,9 @@ jobs:
       LOGIN: ${{ github.actor }}
       PR_REPO_FULL_NAME: ${{ github.event.pull_request.head.repo.full_name }}
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./terraform
     outputs:
       valid_workflow: ${{ steps.validate_workflow.outputs.valid_workflow }}
     steps:
@@ -40,10 +50,13 @@ jobs:
 
   plan:
     env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.TERRAFORM_AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.TERRAFORM_AWS_SECRET_ACCESS_KEY }}
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./terraform
     needs: validate
     if: needs.validate.outputs.valid_workflow == 'True'
     #These steps run if either the PR is within the same repo or if the PR is on a fork and the committer has deployer access
@@ -63,5 +76,5 @@ jobs:
         id: plan
         with:
           var_file: |
-            vars/tvm-ci-prod.auto.tfvars
+            terraform/vars/tvm-ci-prod.auto.tfvars
           workspace: tvm-ci-prod
